<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/fill">

    <com.example.grigo.usb_explore.PinView style="@style/mainPanel" android:id="@+id/mapView"/>

    <Button
        android:id="@+id/btnDirectionsTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="25dp"
        android:text="@string/directions_to"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/btnGo"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="115dp"
        android:text="@string/go"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/btnCancelDirectionsTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="25dp"
        android:text="@string/cancel_directions_to"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/btnFloor0"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:text="@string/floor0"/>

    <Button
        android:id="@+id/btnFloor1"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="65dp"
        android:text="@string/floor1"/>

    <Button
        android:id="@+id/btnFloor2"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="105dp"
        android:text="@string/floor2"/>

    <Button
        android:id="@+id/btnFloor3"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="145dp"
        android:text="@string/floor3"/>

    <Button
        android:id="@+id/btnFloor4"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="185dp"
        android:text="@string/floor4"/>

    <Button
        android:id="@+id/btnFloor5"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="225dp"
        android:text="@string/floor5"/>

    <Button
        android:id="@+id/btnFloor6"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="265dp"
        android:text="@string/floor6"/>

    <ImageView
        android:id="@+id/key"
        android:layout_width="221dp"
        android:layout_height="171dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="110dp"
        app:srcCompat="@drawable/key" />

</RelativeLayout>